--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "js-template",
+  "name": "hashmap",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
